--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width-device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie-edge">
-    <meta name="theme-color" content="#444444">
+    <meta name="theme-color" content="#ff6600">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="manifest" href="manifest.json">
 </head>
